
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct resource {unsigned long flags; scalar_t__ start; scalar_t__ end; int parent; } ;
struct pci_dev {int dev; struct resource* resource; } ;
struct pci_bus {struct pci_dev* self; } ;


 unsigned long IORESOURCE_IO ;
 unsigned long IORESOURCE_MEM ;
 unsigned long IORESOURCE_PREFETCH ;
 int KERN_DEBUG ;
 int PCI_BRIDGE_RESOURCES ;
 int PCI_NUM_RESOURCES ;
 int __pci_setup_bridge (struct pci_bus*,unsigned long) ;
 int dev_printk (int ,int *,char*,int,struct resource*) ;
 int release_child_resources (struct resource*) ;
 int release_resource (struct resource*) ;

__attribute__((used)) static void pci_bridge_release_resources(struct pci_bus *bus,
       unsigned long type)
{
 int idx;
 bool changed = 0;
 struct pci_dev *dev;
 struct resource *r;
 unsigned long type_mask = IORESOURCE_IO | IORESOURCE_MEM |
      IORESOURCE_PREFETCH;

 dev = bus->self;
 for (idx = PCI_BRIDGE_RESOURCES; idx < PCI_NUM_RESOURCES;
      idx++) {
  r = &dev->resource[idx];
  if ((r->flags & type_mask) != type)
   continue;
  if (!r->parent)
   continue;




  release_child_resources(r);
  if (!release_resource(r)) {
   dev_printk(KERN_DEBUG, &dev->dev,
     "resource %d %pR released\n", idx, r);

   r->end = r->end - r->start;
   r->start = 0;
   r->flags = 0;
   changed = 1;
  }
 }

 if (changed) {

  if (type & IORESOURCE_PREFETCH)
   type = IORESOURCE_PREFETCH;
  __pci_setup_bridge(bus, type);
 }
}
